new: nice colors yeah

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,41 +1,36 @@
+# Font and Padding {
+
 font_family      Roboto Mono
 font_size        10.0
 
-foreground   #f8f8f8
-background   #1b1d1e
-color0       #808080
-color8       #465457
-color1       #d7005f
-color9       #f92672
-color2       #87ff00
-color10      #a6e22e
-color3       #ff8700
-color11      #fd971f
-color4       #acac85
-color12      #c4be89
-color5       #af5fff
-color13      #ae81ff
-color6       #5fd7ff
-color14      #84e0f2
-color7       #f8f8f8
-foreground   #f8f8f8
-background   #1b1d1e
-color0       #808080
-color8       #465457
-color1       #d7005f
-color9       #f92672
-color2       #87ff00
-color10      #a6e22e
-color3       #ff8700
-color11      #fd971f
-color4       #acac85
-color12      #c4be89
-color5       #af5fff
-color13      #ae81ff
-color6       #5fd7ff
-color14      #84e0f2
-color7       #f8f8f8
-color15      #ffffff
-color15      #ffffff
+window_padding_width 35
 
-window_padding_width 12
+# }
+
+# Color Scheme {
+
+# Theme: Tomorrow Night Bright
+
+background            #000000
+foreground            #e9e9e9
+cursor                #e9e9e9
+selection_background  #424242
+color0                #000000
+color8                #000000
+color1                #d44d53
+color9                #d44d53
+color2                #b9c949
+color10               #b9c949
+color3                #e6c446
+color11               #e6c446
+color4                #79a6da
+color12               #79a6da
+color5                #c396d7
+color13               #c396d7
+color6                #70c0b1
+color14               #70c0b1
+color7                #fffefe
+color15               #fffefe
+selection_foreground  #000000
+
+# }
