--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@
 font_family      Roboto Mono
 font_size        10.0
 
-window_padding_width 35
+window_padding_width 40
 
 # }
 
@@ -12,25 +12,25 @@ window_padding_width 35
 # Theme: Tomorrow Night Bright
 
 background            #000000
-foreground            #e9e9e9
-cursor                #e9e9e9
-selection_background  #424242
+foreground            #b3b3b3
+cursor                #52ad70
+selection_background  #4c52f8
 color0                #000000
-color8                #000000
-color1                #d44d53
-color9                #d44d53
-color2                #b9c949
-color10               #b9c949
-color3                #e6c446
-color11               #e6c446
-color4                #79a6da
-color12               #79a6da
-color5                #c396d7
-color13               #c396d7
-color6                #70c0b1
-color14               #70c0b1
-color7                #fffefe
-color15               #fffefe
-selection_foreground  #000000
+color8                #555555
+color1                #cc5555
+color9                #ff5555
+color2                #55cc55
+color10               #55ff55
+color3                #cdcd55
+color11               #ffff55
+color4                #5455cb
+color12               #5555ff
+color5                #cc55cc
+color13               #ff55ff
+color6                #7acaca
+color14               #55ffff
+color7                #cccccc
+color15               #ffffff
+selection_foreground #000000
 
 # }
