--- a/.config/picom/.picom.conf
+++ b/.config/picom/.picom.conf
@@ -1,6 +1,6 @@
 # Shadow
 shadow = false;
-shadow-radius = 5;
+shadow-radius = 8;
 shadow-offset-x = -5;
 shadow-offset-y = -5;
 shadow-opacity = 0.5;
@@ -9,17 +9,17 @@ shadow-exclude = [ ];
 
 # Opacity
 alpha-step = 0.06;
-active-opacity = 0.95;
+active-opacity = 0.99;
 frame-opacity = 0.9;
-inactive-opacity = 0.8;
-inactive-opacity-override = false;
+inactive-opacity = 0.9;
+inactive-opacity-override = true;
 opacity-exclude = [
   "class_g = 'Firefox' && argb",
 ];
 
 # Blur
 blur-background = true;
-blur-background-fixed = false;
+blur-background-fixed = true;
 blur-kern = "3x3box";
 blur-background-exclude = [
     "window_type = 'dock'",
@@ -27,7 +27,7 @@ blur-background-exclude = [
 ];
 
 # Fading
-fading = true;
+fading = false;
 fade-delta = 4;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
