--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,8 +1,8 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    # info title
-    # info underline
+    info title
+    info underline
 
     info "OS" distro
     # info "Host" model
@@ -18,9 +18,9 @@ print_info() {
     # info "Icons" icons
     info "Terminal" term
     # info "Terminal Font" term_font
-    # info "CPU" cpu
-    # info "GPU" gpu
-    # info "Memory" memory
+    info "CPU" cpu
+    #info "GPU" gpu
+    info "Memory" memory
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
@@ -34,7 +34,7 @@ print_info() {
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
 
-    # info cols
+    info cols
 }
 
 
