--- a/.config/picom/.picom.conf
+++ b/.config/picom/.picom.conf
@@ -1,6 +1,6 @@
 # Shadow
 shadow = false;
-shadow-radius = 8;
+shadow-radius = 10;
 shadow-offset-x = -5;
 shadow-offset-y = -5;
 shadow-opacity = 0.5;
@@ -15,6 +15,7 @@ inactive-opacity = 0.9;
 inactive-opacity-override = true;
 opacity-exclude = [
   "class_g = 'Firefox' && argb",
+  "class_g: 'Chromium' && argb",
 ];
 
 # Blur
