--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,87 +1,102 @@
+;==========================================================
+;
+;
+;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
+;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
+;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+;
+;==========================================================
+
 [colors]
-background = #dd8d5f
-background-alt = #dd8d5f
-#foreground = #e6e5e7
-foreground = #000
+background = ${xrdb:color0}
+background-alt = #444
+foreground = ${xrdb:color7}
 foreground-alt = #555
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/bar1]
-#;monitor = ${env:MONITOR:HDMI-1}
-width = 100%
-height = 25
-;offset-x = 1%
-;offset-y = 1%
-radius = 0.0
-fixed-center = false
+;-------------------------------------------;
+; bars                                      ;
+;-------------------------------------------;
 
-background = ${colors.background}
+[bar/mybar]
+width = 100%
+height = 41
+fixed-center = true
+
+background = #000f0f0f
 foreground = ${colors.foreground}
 
-line-size = 3
-line-color = #f00
+border-size = 10
+border-color = #00000000
 
-border-size = 0
-border-color = ${colors.background}
+padding-left = 3
+padding-right = 3
 
-padding-left = 0
-padding-right = 2
+module-margin-left = 0
+module-margin-right = 0
 
-module-margin-left = 1
-module-margin-right = 2
-
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-font-3 = Material\-Design\-Iconic\-Font:style=Design-Iconic-Font
+font-0 = Noto Sans:size=8:antialias=true;0			# Main
+font-1 = Noto Sans CJK JP:size=8:antialias=true;0		# (Japanese) Band names, etc.
 
 modules-left = i3
-modules-center = mpd
-modules-right = alsa pulseaudio wlan eth temperature date
+modules-right = pulseaudio date
 
-tray-position = right
-tray-padding = 2
-;tray-background = #0063ff
+tray-position = center
+tray-padding = 0
 
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
+;-------------------------------------------;
+; modules                                   ;
+;-------------------------------------------;
 
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
-wrapping-scroll = false
+wrapping-scroll = true
 
-; Only show workspaces on the same output as the bar
+strip-wsnumbers = true
+
+ws-icon-0 = 1;一
+ws-icon-1 = 2;二
+ws-icon-2 = 3;三
+ws-icon-3 = 4;四
+ws-icon-4 = 5;五
+ws-icon-5 = 6;六
+ws-icon-6 = 7;七
+ws-icon-7 = 8;八
+ws-icon-8 = 9;九
+ws-icon-9 = 10;十
+
+;Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-model = %mode%
+label-mode-padding = 6
+label-mode-foreground = #fff
+label-mode-background = ${colors.background}
 
-
-; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.background-alt}
-label-focused-padding = 2
+label-focused = %icon%
+label-focused-background = ${xrdb:color2}
+label-focused-underline= ${colors.primary}
+label-focused-foreground = #fff
+label-focused-padding = 6
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
-label-unfocused-padding = 2
+label-unfocused = %icon%
+label-unfocused-padding = 6
+label-unfocused-background = ${colors.background}
+label-unfocused-foreground = #fff
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
@@ -92,175 +107,45 @@ label-visible-padding = ${self.label-focused-padding}
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-; Separator in between workspaces
-; label-separator = |
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-[module/wlan]
-type = internal/network
-interface = wlp8s0
-interval = 3.0
-
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = ${colors.background}
-label-connected =   %signal%%   %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
-
-[module/eth]
-type = internal/network
-interface = enp2s0
-interval = 3.0
-
-format-connected-underline = ${colors.background}
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+label-urgent-padding = 5
 
 [module/date]
+
 type = internal/date
-interval = 5
+interval = 1.0
+time = "%I:%M %p"
+label = "%time%"
 
-date =
-date-alt = "    %Y-%m-%d   "
+format = <label>
+format-padding = 0
 
-time =   %H:%M
-time-alt =   %H:%M:%S
-
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = ${colors.background}
-
-label = %date% %time%
+label-background = ${xrdb:color2}
+label-foreground = #fff
+label-padding = 9
 
 [module/pulseaudio]
+
 type = internal/pulseaudio
-
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
-label-volume-foreground = ${root.foreground}
-
-label-muted = 🔇 muted
-label-muted-foreground = #666
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
-
-[module/alsa]
-type = internal/alsa
-
 format-volume = <label-volume>
-label-volume = " "
-label-volume-foreground = ${root.foreground}
+mapped = true
 
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = 
+label-volume = "%percentage%%"
+label-volume-background = ${xrdb:color0}
+label-volume-foreground = #fff
+label-volume-padding = 11
 
-[module/battery]
-type = internal/battery
-battery = BAT1
-adapter = ACAD
-full-at = 98
+format-muted = <label-muted>
 
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+label-muted = "0% (Mute)"
+label-muted-background = ${xrdb:color0}
+label-muted-foreground = #fff
+label-muted-padding = 7
 
-format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
-
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <ramp> <label>
-format-underline = ${colors.background}
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature-c%
-label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
+format-volume-padding = 0
+format-muted-padding = 0
 
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
 
 [global/wm]
 margin-top = 5
