change: updated the theme

--- a/.config/code/settings.json
+++ b/.config/code/settings.json
@@ -78,6 +78,6 @@
   "workbench.sideBar.location": "right",
   "window.menuBarVisibility": "toggle",
   "glassit.alpha": 250,
-  "workbench.colorTheme": "Horizon",
+  "workbench.colorTheme": "SIMPLE DARK",
   "workbench.statusBar.visible": false,
 }
