change: updated configs

--- a/.config/code/settings.json
+++ b/.config/code/settings.json
@@ -3,11 +3,12 @@
   "workbench.startupEditor": "none",
   "workbench.editor.enablePreview": false,
   "workbench.activityBar.visible": false,
+  "workbench.statusBar.visible": false,
   "workbench.iconTheme": "origamid-next-icons",
   "workbench.fontAliasing": "auto",
   "workbench.sideBar.location": "right",
-  "workbench.colorTheme": "SIMPLE DARK",
-  "workbench.statusBar.visible": false,
+  "workbench.colorTheme": "Just Black",
+  // "workbench.colorTheme": "SIMPLE DARK",
   // Editor Configs
   "editor.lineHeight": 22,
   "editor.fontFamily": "Fira Code",
